--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -21,8 +21,9 @@
   </tr>
   <% end %>
   <tr>
-    <td colspan="6" class="text-right"><b>Your Order Total:</b></td>
-    <td colspan="7"><b> <%= current_order.calculate_total %><%#= @order_items.map { |item| item.product.price * item.quantity.to_i }.sum  %></b></td>
+    <th><%= link_to "Add More", cart_path, class: "btn btn-warning" %></th>
+    <td colspan="5" class="text-right"><b>Your Order Total:</b></td>
+    <td colspan="6"><b> <%= current_order.calculate_total %><%#= @order_items.map { |item| item.product.price * item.quantity.to_i }.sum  %></b></td>
   </tr>
   <% else %>
     <p>You Shopping cart is currently empty.</p>
