--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,14 +1,60 @@
 <!-- iterate over each product -->
-<% @products.each do |p| %>
+<%# @products.each do |p| %>
 <!-- print products name and price with the help of ruby currency helper -->
-<%= p.name %> | <%= number_to_currency p.price %>
+<%#= p.name %> <%#= number_to_currency p.price %>
 <!-- create a form for the order item that is created from the product -->
-  <%= form_for @order_item do |f| %>
+  <%#= form_for @order_item do |f| %>
   <!-- using hidden field we will associate a product_id with the order item so we know this order item belongs to this product -->
-    <%= f.hidden_field :product_id, value: p.id %>
+    <%#= f.hidden_field :product_id, value: p.id %>
     <!-- the quantity of order items that we are created from this product -->
-    <%= f.number_field :quantity %>
+    <%#= f.number_field :quantity %>
     <!-- finally the cart button which will help add it to the cart - in other words to the order_items -->
-    <%= f.submit 'Add to Cart' %>
+    <%#= f.submit 'Add to Cart' %>
+  <%# end %>
+<%# end %>
+
+
+<table>
+  <tr>
+    <th>Product Code</th>
+    <th>Name</th>
+    <th>Price</th>
+    <th>Desc</th>
+    <th>Pack Size</th>
+    <th>Quantity</th>
+    <th><%= link_to "Check Out", cart_path, class: "btn btn-primary" %></th>
+  </tr>
+  <% @products.each do |p| %>
+  <tr>
+    <td><%= p.name %></td>
+    <td><%= number_to_currency p.price %></td>
+    <td><%= p.description %></td>
+    <td><%= p.pack_size %></td>
+    <td><%= p.product_code %></td>
+    <%= form_for @order_item do |f| %>
+    <%= f.hidden_field :product_id, value: p.id %>
+    <td><%= f.number_field :quantity %></td>
+    <td><%= f.submit 'Add to Cart' %></td>
+    <% end %>
+  </tr>
   <% end %>
-<% end %>
+</table>
+
+<style>
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: #dddddd;
+}
+</style>
+
