--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -21,7 +21,7 @@
   </tr>
   <% end %>
   <tr>
-    <th><%= link_to "Add More", cart_path, class: "btn btn-warning" %></th>
+    <th><%= link_to "Add More", products_path, class: "btn btn-warning" %></th>
     <td colspan="5" class="text-right"><b>Your Order Total:</b></td>
     <td colspan="6"><b> <%= current_order.calculate_total %><%#= @order_items.map { |item| item.product.price * item.quantity.to_i }.sum  %></b></td>
   </tr>
