Created a show view for each order

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -4,22 +4,24 @@
 
 <div class="container">
   <% @orders.each do |o| %>
-  <div class="message">
-    <div class="message-name">
-      <h3>Order# <%= o.id %></h3>
-      <p><%= o.created_at.strftime("%m/%d/%Y") %></p>
-    </div>
-    <div class="message-body">
-      <p><strong>Total Quantities: <%= current_order.total_quantity %></strong></p>
-      <p>
-        <b>Delivery Address:</b> Unit 5 Brickfield Trading Estate - SO53 4DR
-      </p>
-    </div>
-    <div class="message-status">
-      <p class="status pending"><%= o.status %></p>
-      <p class="price"><%= number_to_currency current_order.calculate_total %></p>
-    </div>
-  </div>
+    <%= link_to order_path(o) do %>
+      <div class="message">
+        <div class="message-name">
+          <h3>Order# <%= o.id %></h3>
+          <p><%= o.created_at.strftime("%m/%d/%Y") %></p>
+        </div>
+        <div class="message-body">
+          <p><strong>Total Quantities: <%= current_order.total_quantity %></strong></p>
+          <p>
+            <b>Delivery Address:</b> Unit 5 Brickfield Trading Estate - SO53 4DR
+          </p>
+        </div>
+        <div class="message-status">
+          <p class="status pending"><%= o.status %></p>
+          <p class="price"><%= number_to_currency current_order.calculate_total %></p>
+        </div>
+      </div>
+    <% end %>
   <% end %>
 </div>
 
