--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,3 +1,5 @@
+<h1>Order# <%= @order.id %> Summary</h1>
+
 <table>
   <tr>
     <th>Product Code</th>
@@ -12,7 +14,7 @@
 <% @order_items.each do |item| %>
   <tr>
     <td><%= item.product.product_code %></td>
-    <td><%= item.product.name %> | <%= link_to "Delete", order_item_path(item), :data => {:confirm => "You Sure?", :method => "delete"} %></td>
+    <td><%= item.product.name %></td>
     <td><%= item.product.description %></td>
     <td><%= number_to_currency item.product.price %></td>
     <td><%= item.quantity %></td>
@@ -21,19 +23,17 @@
   </tr>
   <% end %>
   <tr>
-    <th><%= link_to "Add More", products_path, class: "btn btn-warning" %></th>
-    <th><%= link_to "My Orders", orders_path, class: "btn btn-success" %></th>
-    <td colspan="4" class="text-right"><b>Your Order Total:</b></td>
-    <td colspan="5"><b> <%= current_order.calculate_total %><%#= @order_items.map { |item| item.product.price * item.quantity.to_i }.sum  %></b></td>
+    <th><%= link_to "My Orders", orders_path, class: "btn btn-warning" %></th>
+    <td colspan="5" class="text-right"><b>Your Order Total:</b></td>
+    <td colspan="6"><b> <%= current_order.calculate_total %></b></td>
   </tr>
-  <% else %>
-    <p>You Shopping cart is currently empty.</p>
   <% end %>
 </table>
 
+
 <style>
 table {
-    font-family: arial, sans-serif;
+    /*font-family: arial, sans-serif;*/
     border-collapse: collapse;
     width: 100%;
 }
