--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -25,7 +25,7 @@
   <tr>
     <th><%= link_to "My Orders", orders_path, class: "btn btn-warning" %></th>
     <td colspan="5" class="text-right"><b>Your Order Total:</b></td>
-    <td colspan="6"><b> <%= current_order.calculate_total %></b></td>
+    <td colspan="6"><b> <%= @order.calculate_total %> <%#= current_order.calculate_total %></b></td>
   </tr>
   <% end %>
 </table>
