--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -20,6 +20,7 @@
         <div class="message-status">
           <p class="status pending"><%= o.status %></p>
           <p class="price"><%= number_to_currency o.calculate_total %></p>
+          <%#= link_to "Delete", orders_path(o) ,method: :destroy, data: {confirm: "Are you sure?"}, class: "btn btn-success" %>
         </div>
       </div>
     <% end %>
