--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,23 +11,23 @@
 
       <!-- Links when logged in -->
       <%#= link_to "Sign In", "#", class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "navbar-wagon-item navbar-wagon-link" %>
+      <%#= link_to "Logout", destroy_user_session_path, method: :delete, class: "navbar-wagon-item navbar-wagon-link" %>
       <%#= link_to "Messages", "#", class: "navbar-wagon-item navbar-wagon-link" %>
 
       <!-- Avatar with dropdown menu -->
       <div class="navbar-wagon-item">
         <div class="dropdown">
-          <%#= image_tag "http://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
+          <%= image_tag "https://png.icons8.com/ios/150/156DB1/circled-#{current_user.forname[0]}.png", class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
           <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
             <li>
-              <%= link_to "#" do %>
+              <%= link_to edit_user_registration_path do %>
                 <i class="fa fa-user"></i> <%= t(".profile", default: "Profile") %>
               <% end %>
             </li>
             <li>
-              <%= link_to "#" do %>
-                <i class="fa fa-cog"></i>  <%= t(".settings", default: "Settings") %>
-              <% end %>
+              <%#= link_to "#" do %>
+                <!-- <i class="fa fa-cog"></i>  <%#= t(".settings", default: "Settings") %> -->
+              <%# end %>
             </li>
             <li>
               <%= link_to destroy_user_session_path, method: :delete do %>
@@ -39,7 +39,12 @@
       </div>
     <% else %>
       <!-- Login link (when logged out) -->
-      <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
+      (<%= link_to new_user_session_path do %>
+      <%= image_tag "https://png.icons8.com/ios/55/156DB1/circled-L.png" %>
+      <% end %> )---(
+      <%= link_to new_user_registration_path do %>
+      <%= image_tag "https://png.icons8.com/ios/55/156DB1/circled-S.png" %>
+      <% end %>)
     <% end %>
   </div>
 
