Every Route has been protected by default

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -39,12 +39,12 @@
       </div>
     <% else %>
       <!-- Login link (when logged out) -->
-      (<%= link_to new_user_session_path do %>
+      <%= link_to new_user_session_path do %>
       <%= image_tag "https://png.icons8.com/ios/55/156DB1/circled-L.png" %>
       <% end %> )---(
       <%= link_to new_user_registration_path do %>
       <%= image_tag "https://png.icons8.com/ios/55/156DB1/circled-S.png" %>
-      <% end %>)
+      <% end %>
     <% end %>
   </div>
 
