Chnaged the login and signup logos

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -41,10 +41,10 @@
       <!-- Login link (when logged out) -->
       <%= link_to new_user_session_path do %>
       <%= image_tag "https://png.icons8.com/ios/55/156DB1/circled-L.png" %>
-      <% end %> )---(
+      <% end %><p style="color:#156DB1">ogin</p> &ensp;
       <%= link_to new_user_registration_path do %>
       <%= image_tag "https://png.icons8.com/ios/55/156DB1/circled-S.png" %>
-      <% end %>
+      <% end %><p style="color:#156DB1">ignUp</p>
     <% end %>
   </div>
 
