--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -19,7 +19,11 @@
           </p>
         </div>
         <div class="message-status">
+          <% if o.status == "pending" %>
           <p class="status pending"><%= o.status %></p>
+          <% elsif o.status == "Completed" || "completed" %>
+          <p class="status accepted"><%= o.status %></p>
+          <% end %>
           <p class="price"><%= number_to_currency o.calculate_total %></p>
           <%#= link_to "Delete", orders_path(o) ,method: :destroy, data: {confirm: "Are you sure?"}, class: "btn btn-success" %>
         </div>
