--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -23,9 +23,12 @@
   </tr>
   <% end %>
   <tr>
+
     <th><%= link_to "My Orders", orders_path, class: "btn btn-warning" %></th>
-    <td colspan="5" class="text-right"><b>Your Order Total:</b></td>
-    <td colspan="6"><b> <%=number_to_currency @order.calculate_total %> <%#= current_order.calculate_total %></b></td>
+    <% if @order.status == "Ordered" %>
+    <th><%= link_to "Edit Orders", edit_order_path(@order), class: "btn btn-warning" %></th><% end %>
+    <td colspan="4" class="text-right"><b>Your Order Total:</b></td>
+    <td colspan="5"><b> <%=number_to_currency @order.calculate_total %> <%#= current_order.calculate_total %></b></td>
   </tr>
   <% end %>
 </table>
