--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,18 +1,13 @@
 <div class="container">
   <div class="row pad-top">
-    <div class="col-xs-12 col-md-4 text-center">
+    <div class="col-xs-12 col-md-6 text-center">
       <div class="well">
-        <%= link_to "Buy New Products", products_path, class: "btn btn-success btn-lg" %>
+        <%= link_to "Buy New Products", new_order_path, class: "btn btn-success btn-lg" %>
       </div>
     </div>
-    <div class="col-xs-12 col-md-4 text-center">
+    <div class="col-xs-12 col-md-6 text-center">
       <div class="well">
-        <%= link_to "My Orders", orders_path, class: "btn btn-primary btn-lg" %>
-      </div>
-    </div>
-    <div class="col-xs-12 col-md-4 text-center">
-      <div class="well">
-        <%= link_to "My Cart", cart_path, class: "btn btn-warning btn-lg" %>
+        <%= link_to "My Orders", orders_path, class: "btn btn-warning btn-lg" %>
       </div>
     </div>
   </div>
