--- a/app/views/orders/_order_item.html.erb
+++ b/app/views/orders/_order_item.html.erb
@@ -1,4 +1,6 @@
-<%= oi.select(:product_id, Product.all.collect { |p| [p.name, p.id] }, {include_blank: "Select One"}, {class: "product-selector", data: {counter_id: counter}} ) %>
+<!-- OLD Form partial below -->
+
+<%= oi.select(:product_id, Product.all.collect { |p| [p.name + "<br><i>test</i>", p.id] }, {include_blank: "Select One"}, {class: "product-selector", data: {counter_id: counter}} ) %>
 
 <%= oi.text_field :quantity, class: "quan-tot", data: {counter_id: counter } %>
 
@@ -8,3 +10,61 @@
 <input class="order-item-total" id="total-<%= counter %>" value="<%= oi.object.total %>" disabled>
 
 
+<!-- OLD Form using table below -->
+<div class="container">
+  <table>
+    <tr>
+      <th>Product</th>
+      <th>Quantity</th>
+      <th>Code</th>
+      <th>Pack Size</th>
+      <th>Price</th>
+      <th>Current Total</th>
+      <!-- <th><%#= link_to "Check Out", cart_path, class: "btn btn-primary" %></th> -->
+    </tr>
+    <%= form_for @order do |f| %>
+      <% my_counter = 0 %>
+      <%= f.fields_for :order_items do |oi| %>
+      <tr>
+        <td><%= oi.select(:product_id, options_for_select(Product.all.collect { |p| [p.name, p.id] }), {include_blank: "Select One"}, {class: "product-selector form-control selectpicker", id: "selectpicker", data: {counter_id: my_counter}} ) %></td>
+        <td><%= oi.text_field :quantity, class: "quan-tot form-control", data: {counter_id: my_counter } %></td>
+        <td><input id="product-code-<%= my_counter %>" value="<%= oi.object.product ? oi.object.product.product_code : "" %>" disabled></td>
+        <td><input id="pack-size-<%= my_counter %>" value="<%= oi.object.product ? oi.object.product.pack_size : "" %>"  disabled></td>
+        <td><input id="price-<%= my_counter %>" value="<%= oi.object.product ? oi.object.product.price : "" %>" disabled></td>
+        <td><div class="input-group"><span class="input-group-addon">£</span><input class="order-item-total form-control" id="total-<%= my_counter %>" value="<%= oi.object.total %>" disabled></div></td>
+      <% my_counter = my_counter.to_i + 1 %>
+      </tr>
+      <% end %>
+    <tr>
+      <td><%= f.submit "Submit Order", class: "btn btn-primary"%></td>
+      <td><strong>Total: </strong></td>
+      <td>
+          <div class="input-group">
+            <span class="input-group-addon">£</span>
+            <input type="text" class="form-control" value="<%= @order.calculate_total %>" id="total-order-value" disabled>
+          </div>
+      </td>
+    </tr>
+    <% end %>
+  </table>
+</div>
+
+<!-- OLD Form Style -->
+
+<style>
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: #dddddd;
+}
+</style>
