Created Companies Model, Admin Dashboard amended, Order Policy Amended and much more

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -9,7 +9,7 @@
   </div>
 
   <%# if @orders.current_user? %>
-  <% current_user.orders.each do |o| %>
+  <% @orders.each do |o| %>
    <%# if policy(o).index %>
     <%= link_to order_path(o) do %>
       <div class="message">
