Order show edit form has been customized now to include a select option for order statuses

--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -14,5 +14,5 @@
 // Overriding any non-variable SASS must be done after the fact.
 // For example, to change the default status-tag color:
 //.status_tag { background: #6090DB; }
- .error {color:red}
- .done {color:green}
+ .error {background:#dd1c1c;}
+ .done {color:#8DAA88;}
