--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -15,4 +15,4 @@
 // For example, to change the default status-tag color:
 //.status_tag { background: #6090DB; }
  .error {background:#dd1c1c;}
- .done {color:#8DAA88;}
+ .done {background:#8DAA88;}
