Admin order update method is now custom and has different flash notices

--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -16,3 +16,5 @@
 //.status_tag { background: #6090DB; }
  .error {background:#dd1c1c;}
  .done {background:#8DAA88;}
+ .warning {background:orange;}
+ .blue {background:#1a8fc6;}
