Consignment Items are now created for both incomplete and dispatched orders

--- a/app/views/admin/consignments/_show_partial.html.erb
+++ b/app/views/admin/consignments/_show_partial.html.erb
@@ -18,6 +18,7 @@
     <td><%= ci.order_item.product.description %></td>
     <td><%= ci.quantity %></td>
     <td><%= ci.order_item.quantity %></td>
+    <td><%= ci.order_item.order.status %></td>
     <td><%= ci.created_at %></td>
     <td><%= ci.order_item.product.price %></td>
   </tr>
